--- a/package.json
+++ b/package.json
@@ -6,14 +6,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "bcrypt": "^5.0.1",
+    "cookie": "^0.4.2",
+    "crypto": "^1.0.1",
+    "framer-motion": "^6.2.4",
+    "google-auth-library": "^7.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.0",
+    "mongoose-unique-validator": "^3.0.0",
     "next": "latest",
+    "next-connect": "^0.11.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-login": "^5.2.2"
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
+    "react-toastify": "^8.1.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/mongoose-unique-validator": "^1.0.5",
     "@types/node": "17.0.4",
-    "@types/react": "17.0.38",
+    "@types/react": "^17.0.2",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
